--- a/app/src/main/res/layout/modelo_produtos.xml
+++ b/app/src/main/res/layout/modelo_produtos.xml
@@ -13,22 +13,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        />
+        android:orientation="vertical" />
+
     <ImageView
         android:id="@+id/modImageProduto"
         android:layout_width="match_parent"
         android:layout_height="225dp"
-        android:src="#2c2c2c"
-       android:layout_margin="10dp"
-/>
+        android:layout_margin="10dp"
+        android:src="@drawable/manga1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="manga"
-        android:layout_gravity="center|bottom"
-        />
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_margin="15dp"
+        android:layout_marginTop="5sp"
+        android:fontFamily="@font/barlowcondensed_regular"
+        android:text="Manga"
+        android:textAlignment="center"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
 
 </androidx.cardview.widget.CardView>
